--- a/PLANTA_MAIZE.ipynb
+++ b/PLANTA_MAIZE.ipynb
@@ -27,31 +27,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun Jun  6 20:13:31 2021       \r\n",
-      "+-----------------------------------------------------------------------------+\r\n",
-      "| NVIDIA-SMI 460.80       Driver Version: 460.80       CUDA Version: 11.2     |\r\n",
-      "|-------------------------------+----------------------+----------------------+\r\n",
-      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\r\n",
-      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\r\n",
-      "|                               |                      |               MIG M. |\r\n",
-      "|===============================+======================+======================|\r\n",
-      "|   0  GeForce GTX 960     Off  | 00000000:01:00.0  On |                  N/A |\r\n",
-      "| 31%   47C    P0    24W / 120W |    698MiB /  1999MiB |      1%      Default |\r\n",
-      "|                               |                      |                  N/A |\r\n",
-      "+-------------------------------+----------------------+----------------------+\r\n",
-      "                                                                               \r\n",
-      "+-----------------------------------------------------------------------------+\r\n",
-      "| Processes:                                                                  |\r\n",
-      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\r\n",
-      "|        ID   ID                                                   Usage      |\r\n",
-      "|=============================================================================|\r\n",
-      "|    0   N/A  N/A       998      G   /usr/lib/xorg/Xorg                 54MiB |\r\n",
-      "|    0   N/A  N/A      1549      G   /usr/lib/xorg/Xorg                207MiB |\r\n",
-      "|    0   N/A  N/A      1677      G   /usr/bin/gnome-shell               38MiB |\r\n",
-      "|    0   N/A  N/A      3322      G   ...AAAAAAAAA= --shared-files      345MiB |\r\n",
-      "|    0   N/A  N/A      3832      G   ...AAAAAAAAA= --shared-files       14MiB |\r\n",
-      "|    0   N/A  N/A      5668      G   ...AAAAAAAAA= --shared-files       20MiB |\r\n",
-      "+-----------------------------------------------------------------------------+\r\n"
+      "Sun Jun  6 20:13:31 2021       \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 460.80       Driver Version: 460.80       CUDA Version: 11.2     |\n",
+      "|-------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                               |                      |               MIG M. |\n",
+      "|===============================+======================+======================|\n",
+      "|   0  GeForce GTX 960     Off  | 00000000:01:00.0  On |                  N/A |\n",
+      "| 31%   47C    P0    24W / 120W |    698MiB /  1999MiB |      1%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "                                                                               \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| Processes:                                                                  |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+      "|        ID   ID                                                   Usage      |\n",
+      "|=============================================================================|\n",
+      "|    0   N/A  N/A       998      G   /usr/lib/xorg/Xorg                 54MiB |\n",
+      "|    0   N/A  N/A      1549      G   /usr/lib/xorg/Xorg                207MiB |\n",
+      "|    0   N/A  N/A      1677      G   /usr/bin/gnome-shell               38MiB |\n",
+      "|    0   N/A  N/A      3322      G   ...AAAAAAAAA= --shared-files      345MiB |\n",
+      "|    0   N/A  N/A      3832      G   ...AAAAAAAAA= --shared-files       14MiB |\n",
+      "|    0   N/A  N/A      5668      G   ...AAAAAAAAA= --shared-files       20MiB |\n",
+      "+-----------------------------------------------------------------------------+\n"
      ]
     }
    ],
@@ -1115,7 +1115,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
