Added object detection models

--- a/Mask_RCNN.ipynb
+++ b/Mask_RCNN.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -22,14 +22,46 @@
     "id": "Ek5eEI5D532y",
     "outputId": "ac06deba-011d-4443-8489-e2088544e46e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wed Jul  7 17:19:36 2021       \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 460.80       Driver Version: 460.80       CUDA Version: 11.2     |\n",
+      "|-------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                               |                      |               MIG M. |\n",
+      "|===============================+======================+======================|\n",
+      "|   0  GeForce GTX 960     Off  | 00000000:01:00.0  On |                  N/A |\n",
+      "| 31%   48C    P0    26W / 120W |    562MiB /  1999MiB |      1%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "                                                                               \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| Processes:                                                                  |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+      "|        ID   ID                                                   Usage      |\n",
+      "|=============================================================================|\n",
+      "|    0   N/A  N/A      1040      G   /usr/lib/xorg/Xorg                 54MiB |\n",
+      "|    0   N/A  N/A      1712      G   /usr/lib/xorg/Xorg                191MiB |\n",
+      "|    0   N/A  N/A      1841      G   /usr/bin/gnome-shell               52MiB |\n",
+      "|    0   N/A  N/A      3110      G   ...AAAAAAAAA= --shared-files      203MiB |\n",
+      "|    0   N/A  N/A     14472      G   ...AAAAAAAAA= --shared-files       13MiB |\n",
+      "|    0   N/A  N/A     21477      G   ...AAAAAAAAA= --shared-files       31MiB |\n",
+      "+-----------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
    "source": [
     "!nvidia-smi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -39,7 +71,25 @@
     "id": "yvQoBq3vIS3W",
     "outputId": "e849b898-92ff-458d-cb28-a2ade3631c88"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python implementation: CPython\n",
+      "Python version       : 3.8.10\n",
+      "IPython version      : 7.25.0\n",
+      "\n",
+      "numpy      : 1.21.0\n",
+      "pandas     : 1.3.0\n",
+      "pycocotools: 2.0.2\n",
+      "torch      : 1.7.1\n",
+      "torchvision: 0.8.2\n",
+      "detectron2 : 0.4+cu101\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%reload_ext watermark\n",
     "%watermark -v -p numpy,pandas,pycocotools,torch,torchvision,detectron2"
@@ -47,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -57,7 +107,29 @@
     "id": "Hh_Kp8pYwaEG",
     "outputId": "89b39b0d-8083-4c09-a002-6b777bc2b34c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gcc (Ubuntu 9.3.0-17ubuntu1~20.04) 9.3.0\n",
+      "Copyright (C) 2019 Free Software Foundation, Inc.\n",
+      "This is free software; see the source for copying conditions.  There is NO\n",
+      "warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x7fd516dacd50>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch, torchvision\n",
     "import detectron2\n",
@@ -116,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -129,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -142,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -152,20 +224,163 @@
     "id": "t5UwqAxOKSI2",
     "outputId": "c2c290b5-879d-45eb-e627-75a22fd48a24"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image</th>\n",
+       "      <th>x1</th>\n",
+       "      <th>y1</th>\n",
+       "      <th>x2</th>\n",
+       "      <th>y2</th>\n",
+       "      <th>user</th>\n",
+       "      <th>day</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>minute</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DSC00025.JPG</td>\n",
+       "      <td>1864</td>\n",
+       "      <td>2064</td>\n",
+       "      <td>2864</td>\n",
+       "      <td>1648</td>\n",
+       "      <td>Tyr</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>16</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DSC00026.JPG</td>\n",
+       "      <td>2872</td>\n",
+       "      <td>1416</td>\n",
+       "      <td>3152</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Tyr</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>16</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DSC00027.JPG</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Tyr</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DSC00028.JPG</td>\n",
+       "      <td>3248</td>\n",
+       "      <td>1540</td>\n",
+       "      <td>3572</td>\n",
+       "      <td>2048</td>\n",
+       "      <td>Tyr</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>16</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>DSC00028.JPG</td>\n",
+       "      <td>3444</td>\n",
+       "      <td>1916</td>\n",
+       "      <td>3852</td>\n",
+       "      <td>2116</td>\n",
+       "      <td>Tyr</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>16</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          image    x1    y1    x2    y2 user  day  month  year  hour  minute\n",
+       "0  DSC00025.JPG  1864  2064  2864  1648  Tyr   26      5  2016    16      48\n",
+       "1  DSC00026.JPG  2872  1416  3152  2016  Tyr   26      5  2016    16      48\n",
+       "2  DSC00027.JPG     0     0     0     0  Tyr    5     10  2015    17       0\n",
+       "3  DSC00028.JPG  3248  1540  3572  2048  Tyr   26      5  2016    16      48\n",
+       "4  DSC00028.JPG  3444  1916  3852  2116  Tyr   26      5  2016    16      48"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "diseases_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "D0u_JoWBnSEU"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                                                                                                                                                                     | 0/7699 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './original_images/DSC00025.JPG'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_22556/729202107.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mimage_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'image'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'{}{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimage_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/share/virtualenvs/ura-5A-0B0Lr/lib/python3.8/site-packages/PIL/Image.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(fp, mode, formats)\u001b[0m\n\u001b[1;32m   2966\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2967\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2968\u001b[0;31m         \u001b[0mfp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuiltins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2969\u001b[0m         \u001b[0mexclusive_fp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2970\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './original_images/DSC00025.JPG'"
+     ]
+    }
+   ],
    "source": [
     "dataset = []\n",
     "\n",
